2010-09-18  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/45709
	* tree-inline.c (copy_phis_for_bb): Delay commit of edge
	insertions until after all PHI nodes of the block are processed.

2010-09-01  Eric Botcazou  <ebotcazou@adacore.com>

	* gimplify.c (gimplify_init_constructor): Do not create a temporary for
	a volatile LHS if the constructor has only one element.

2010-08-14  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	Revert:
	2010-08-10  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	PR boehm-gc/34544
	* gthr-posix.h (__gthread_start): Delete.
	(__gthread_active_init): Use pthread_default_stacksize_np instead of
	pthread_create to determine if hpux pthreads are active.
	* gthr-posix95.h (__gthread_start): Delete.
	(__gthread_active_init): Likewise use pthread_default_stacksize_np.

2010-08-11  Richard Guenther  <rguenther@suse.de>

	PR c/44555
	* c-common.c (c_common_truthvalue_conversion): Remove
	premature and wrong optimization concering ADDR_EXPRs.

2010-08-10  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	PR boehm-gc/34544
	* gthr-posix.h (__gthread_start): Delete.
	(__gthread_active_init): Use pthread_default_stacksize_np instead of
	pthread_create to determine if hpux pthreads are active.
	* gthr-posix95.h (__gthread_start): Delete.
	(__gthread_active_init): Likewise use pthread_default_stacksize_np.

2010-08-08  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	* config/pa/pa.c (override_options): Fix warning.

2010-08-06  Uros Bizjak  <ubizjak@gmail.com>

	* expmed.c (expand_mult_const) <case alg_shift>: Expand shift into
	temporary. Emit move from temporary to accum, so REG_EQUAL note will
	be attached to this insn in correct mode.

2010-08-06  Uros Bizjak  <ubizjak@gmail.com>

	* config/i386/i386.c (ix86_decompose_address): Check for SI_REG
	using REGNO of base_reg directly.

2010-08-05  Ulrich Weigand  <Ulrich.Weigand@de.ibm.com>

	* config/spu/spu.c (spu_emit_branch_hint): Do not access NOTE_KIND of
	non-NOTE insns.
